Modifying the organization of directories

--- a/height/templates/height/curves.html
+++ b/height/templates/height/curves.html
@@ -1,8 +1,8 @@
-{% extends 'curves/base.html' %}
+{% extends 'height/base.html' %}
 {% load static %}
 
 {% block js %}
-  <script src="{% static 'curves/draw.js' %}"></script>
+  <script src="{% static 'height/draw.js' %}"></script>
 {% endblock %}
 
 {% block body %}
