--- a/height/templates/height/base.html
+++ b/height/templates/height/base.html
@@ -11,7 +11,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="{% static 'curves/chart.css' %}" />
+    <link rel="stylesheet" href="{% static 'height/chart.css' %}" />
     {% block css %}{% endblock %}
   </head>
   <body>
